--- a/ui/src/app/session-view/session-view.component.html
+++ b/ui/src/app/session-view/session-view.component.html
@@ -1,10 +1,19 @@
-<p>session-view works!</p>
-<mat-form-field appearance="fill">
-    <mat-label>Language</mat-label>
-    <mat-select (selectionChange)="onLanguageChange($event)" [(value)]="editorOptions.language">
-      <mat-option *ngFor="let language of languages" [value]="language">
-          {{language}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+<div class="top-bar">coCoder</div>
+<div class="dropdowns-container">
+    <mat-form-field appearance="fill">
+        <mat-label>Language</mat-label>
+        <mat-select (selectionChange)="onLanguageChange($event)" [(value)]="editorOptions.language">
+            <mat-option *ngFor="let language of languages" [value]="language">
+                {{language}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+        <mat-label>Theme</mat-label>
+        <mat-select (selectionChange)="onThemeChange($event)" [(value)]="editorOptions.theme">
+            <mat-option value="vs">Light</mat-option>
+            <mat-option value="vs-dark">Dark</mat-option>
+        </mat-select>
+    </mat-form-field>
+</div>
 <ngx-monaco-editor [options]="editorOptions" (onInit)="onInit($event)" class="editor-field"></ngx-monaco-editor>
