--- a/ui/src/app/session-view/session-view.component.scss
+++ b/ui/src/app/session-view/session-view.component.scss
@@ -1,7 +1,8 @@
 .editor-field {
   width: 100%;
-  height: 100%;
   position: relative;
+  overflow: hidden;
+  flex-grow: 1;
 }
 
 .dropdowns-container {
@@ -15,7 +16,13 @@
   font-family: "Courier New", Courier, monospace;
   font-size: 2em;
   color: black;
-  //   text-shadow: 1px 1px #999999;
   padding-top: 8px;
   padding-bottom: 8px;
+}
+
+.content-container {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
