--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -7,7 +7,7 @@
             <mat-label>Session ID</mat-label>
             <input class="session-input" #sessionInput matInput placeholder="Ex. 123e4567-e89b-12d3-a456-426614174000">
           </mat-form-field>
-          <a mat-raised-button class="go-button" color="primary" [routerLink]="['/', sessionInput.value]">Go!</a>
+          <a mat-raised-button class="go-button" color="primary" [routerLink]="['/s/', sessionInput.value]">Go!</a>
         </div>
         <button class="new-session-button" mat-raised-button color="primary" (click)="newSession()">Start new session</button>
       </div>
