--- a/ui/src/app/session-view/session-view.component.html
+++ b/ui/src/app/session-view/session-view.component.html
@@ -17,12 +17,12 @@
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Theme</mat-label>
-                <mat-select (selectionChange)="onThemeChange($event)">
+                <mat-select (selectionChange)="onThemeChange($event)" [(value)]="selectedTheme">
                     <mat-option value="vs">Light</mat-option>
                     <mat-option value="vs-dark">Dark</mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
-        <ngx-monaco-editor [options]="{theme: initialTheme}" (onInit)="onInit($event)" class="editor-field"></ngx-monaco-editor>
+        <ngx-monaco-editor [options]="{theme: selectedTheme}" (onInit)="onInit($event)" class="editor-field"></ngx-monaco-editor>
     </div>
 </ng-template>
