displaying other user cursor in the frontend

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,4 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@use "sass:list";
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+$colors: blue, red, yellow, green, magenta;
+
+@for $i from 1 through list.length($colors) {
+  .other-user-cursor-#{$i} {
+    background: list.nth($colors, $i);
+    width: 2px !important;
+  }
+}
