--- a/ui/src/app/session-view/session-view.component.html
+++ b/ui/src/app/session-view/session-view.component.html
@@ -1,28 +1,35 @@
 <app-page-not-found *ngIf="sessionInvalid; else normalContent"></app-page-not-found>
 <ng-template #normalContent>
     <div class="content-container">
-        <div class="top-bar">coCoder</div>
-        <div class="dropdowns-container">
-            <mat-form-field appearance="fill">
-                <mat-label #languageSelect>Language</mat-label>
-                <mat-select (selectionChange)="onLanguageChange($event)" [(value)]="selectedLanguage">
-                    <mat-option *ngFor="let language of languages" [value]="language">
-                        {{language}}
-                    </mat-option>
-                    <mat-divider></mat-divider>
-                    <mat-option *ngFor="let language of otherLanguages()" [value]="language">
-                        {{language}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>Theme</mat-label>
-                <mat-select (selectionChange)="onThemeChange($event)" [(value)]="selectedTheme">
-                    <mat-option value="vs">Light</mat-option>
-                    <mat-option value="vs-dark">Dark</mat-option>
-                </mat-select>
-            </mat-form-field>
+        <div class="top-bar-row">
+            <button mat-button class="home-button" [routerLink]="['/']">coCoder</button>
         </div>
-        <ngx-monaco-editor [options]="{theme: selectedTheme}" (onInit)="onInit($event)" class="editor-field"></ngx-monaco-editor>
+        <div class="dropdowns-container">
+            <div class="dropdown-container">
+                <mat-form-field appearance="fill">
+                    <mat-label #languageSelect>Language</mat-label>
+                    <mat-select (selectionChange)="onLanguageChange($event)" [(value)]="selectedLanguage">
+                        <mat-option *ngFor="let language of languages" [value]="language">
+                            {{language}}
+                        </mat-option>
+                        <mat-divider></mat-divider>
+                        <mat-option *ngFor="let language of otherLanguages()" [value]="language">
+                            {{language}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="dropdown-container">
+                <mat-form-field appearance="fill">
+                    <mat-label>Theme</mat-label>
+                    <mat-select (selectionChange)="onThemeChange($event)" [(value)]="selectedTheme">
+                        <mat-option value="vs">Light</mat-option>
+                        <mat-option value="vs-dark">Dark</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+        </div>
+        <ngx-monaco-editor [options]="{theme: selectedTheme}" (onInit)="onInit($event)" class="editor-field">
+        </ngx-monaco-editor>
     </div>
 </ng-template>
