--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -19,3 +19,6 @@ $colors: blue, red, yellow, green, magenta;
     width: 2px !important;
   }
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
