migration to bootstrap

--- a/ui/src/app/page-not-found/page-not-found.component.html
+++ b/ui/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
     <div class="row-content-container">
-        <mat-card class="mat-elevation-z0 message">This is not the page that you're looking for</mat-card>
+        <div>This is not the page that you're looking for</div>
     </div>
 </div>
