--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,15 +1,8 @@
 <div class="main-container">
     <div class="row-content-container">
       <div class="content-container">
-        <mat-card class="mat-elevation-z0 logo">coCoder</mat-card>
-        <div class="load-session-row">
-          <mat-form-field class="textarea-container" appearance="fill">
-            <mat-label>Session ID</mat-label>
-            <input class="session-input" #sessionInput matInput placeholder="Ex. 123e4567-e89b-12d3-a456-426614174000">
-          </mat-form-field>
-          <a mat-raised-button class="go-button" color="primary" [routerLink]="['/s/', sessionInput.value]">Go!</a>
-        </div>
-        <button class="new-session-button" mat-raised-button color="primary" (click)="newSession()">Start new session</button>
+        <div>coCoder</div>
+        <button class="btn btn-lg btn-outline-primary new-session-button" color="primary" (click)="newSession()">Start new session</button>
       </div>
     </div>
   </div>
