--- a/ui/src/app/session-view/session-view.component.scss
+++ b/ui/src/app/session-view/session-view.component.scss
@@ -18,7 +18,6 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  min-height: 60px;
   flex-basis: content;
   gap: 0px;
 }
@@ -37,4 +36,9 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+}
+
+.dropdown-menu {
+  overflow-y: auto;
+  max-height: 300px;
 }
