--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
     <div class="row-content-container">
       <div class="content-container">
-        <div>coCoder</div>
+        <div class="logo">coCoder</div>
         <button class="btn btn-lg btn-outline-primary new-session-button" color="primary" (click)="newSession()">Start new session</button>
       </div>
     </div>
