--- a/ui/src/app/page-not-found/page-not-found.component.html
+++ b/ui/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
     <div class="row-content-container">
-        <div>This is not the page that you're looking for</div>
+        <span class="badge badge-warning message">This is not the page that you're looking for</span>
     </div>
 </div>
