--- a/ui/src/app/session-view/session-view.component.html
+++ b/ui/src/app/session-view/session-view.component.html
@@ -2,7 +2,7 @@
 <ng-template #normalContent>
     <div class="content-container">
         <div class="top-bar-row">
-            <button mat-button class="home-button" [routerLink]="['/']">coCoder</button>
+            <button mat-button class="btn btn-light btn-lg home-button" [routerLink]="['/']">coCoder</button>
         </div>
         <div class="dropdowns-container">
             <div class="dropdown-container">
