--- a/ui/src/app/session-view/session-view.component.scss
+++ b/ui/src/app/session-view/session-view.component.scss
@@ -25,6 +25,8 @@
 .home-button {
   font-family: "Courier New", Courier, monospace;
   font-size: 2em;
+  text-align: center;
+  text-shadow: 2px 2px #999999;
 }
 
 .top-bar-row {
