--- a/ui/src/app/session-view/session-view.component.scss
+++ b/ui/src/app/session-view/session-view.component.scss
@@ -1,3 +1,5 @@
+@import "../common.scss";
+
 .editor-field {
   width: 100%;
   position: relative;
@@ -23,19 +25,20 @@
 }
 
 .home-button {
-  font-family: "Courier New", Courier, monospace;
-  font-size: 2em;
-  text-align: center;
-  text-shadow: 2px 2px #999999;
+  text-shadow: 0px 0px #999999;
 }
 
 .top-bar-row {
   width: 100%;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
 }
 
 .content-container {
   overflow: hidden;
   display: flex;
+  position: relative;
   flex-direction: column;
   height: 100%;
 }
