integrating top bar to home screen

--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,8 +1,9 @@
+<app-top-bar></app-top-bar>
 <div class="main-container">
-    <div class="row-content-container">
-      <div class="content-container">
-        <div class="logo">coCoder</div>
-        <button class="btn btn-lg btn-outline-primary new-session-button" color="primary" (click)="newSession()">Start new session</button>
-      </div>
+  <div class="row-content-container">
+    <div class="content-container">
+      <button class="btn btn-lg btn-outline-primary new-session-button" color="primary" (click)="newSession()">Start new
+        session</button>
     </div>
   </div>
+</div>
