--- a/ui/src/app/top-bar/top-bar.component.html
+++ b/ui/src/app/top-bar/top-bar.component.html
@@ -1,29 +1,29 @@
-
-
 <div class="top-bar-row">
     <button class="logo home-button btn btn-outline-secondary" [routerLink]="['/']">coCoder</button>
-    <div ngbDropdown class="d-inline-block language-dropdown">
-        <button class="btn btn-outline-primary"
-            ngbDropdownToggle>{{selectedLanguage}}</button>
-        <div ngbDropdownMenu class="dropdown-menu">
-            <button *ngFor="let language of languages" ngbDropdownItem
-                (click)="onLanguageChange(language)">{{language}}</button>
-            <hr class="solid">
-            <button *ngFor="let language of otherLanguages()" ngbDropdownItem
-                (click)="onLanguageChange(language)">{{language}}</button>
+    <div *ngIf="_editorMode">
+
+        <div ngbDropdown class="d-inline-block language-dropdown">
+            <button class="btn btn-outline-primary" ngbDropdownToggle>{{selectedLanguage}}</button>
+            <div ngbDropdownMenu class="dropdown-menu">
+                <button *ngFor="let language of languages" ngbDropdownItem
+                    (click)="onLanguageChange(language)">{{language}}</button>
+                <hr class="solid">
+                <button *ngFor="let language of otherLanguages()" ngbDropdownItem
+                    (click)="onLanguageChange(language)">{{language}}</button>
+            </div>
         </div>
-    </div>
-    <div type="button" class="btn btn-default" (click)="downloadButtonClicked()">
-        <i class="bi bi-file-earmark-arrow-down"></i>
-    </div>
-    <div type="button" class="btn btn-default" (click)="shareButtonClicked()">
-        <i class="bi bi-share"></i>
-    </div>
-    <div type="button" class="btn btn-default" (click)="zoomInButtonClicked()">
-        <i class="bi bi-zoom-in"></i>
-    </div>
-    <div type="button" class="btn btn-default" (click)="zoomOutButtonClicked()">
-        <i class="bi bi-zoom-out"></i>
+        <div type="button" class="btn btn-default" (click)="downloadButtonClicked()">
+            <i class="bi bi-file-earmark-arrow-down"></i>
+        </div>
+        <div type="button" class="btn btn-default" (click)="shareButtonClicked()">
+            <i class="bi bi-share"></i>
+        </div>
+        <div type="button" class="btn btn-default" (click)="zoomInButtonClicked()">
+            <i class="bi bi-zoom-in"></i>
+        </div>
+        <div type="button" class="btn btn-default" (click)="zoomOutButtonClicked()">
+            <i class="bi bi-zoom-out"></i>
+        </div>
     </div>
 
     <div class="empty-space">
