integrating top bar into page not found

--- a/ui/src/app/page-not-found/page-not-found.component.html
+++ b/ui/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,4 @@
+<app-top-bar></app-top-bar>
 <div class="main-container">
     <div class="row-content-container">
         <span class="badge badge-warning message">This is not the page that you're looking for</span>
