--- a/ui/src/app/top-bar/top-bar.component.scss
+++ b/ui/src/app/top-bar/top-bar.component.scss
@@ -26,3 +26,30 @@
 .empty-space {
   flex-grow: 1;
 }
+
+:host-context(.bootstrap-dark) {
+  .btn:hover {
+    background-color: rgb(90, 90, 90);
+  }
+
+  .btn:active {
+    background-color: rgb(40, 40, 40);
+  }
+}
+
+:host-context(.bootstrap) {
+  .btn:hover {
+    background-color: rgb(200, 200, 200);
+  }
+
+  .btn:active {
+    background-color: rgb(160, 160, 160);
+  }
+}
+
+.editor-controls-container {
+  display: flex;
+  flex-direction: row;
+  gap: 3px;
+  align-items: baseline;
+}
