--- a/ui/src/app/home/home.component.scss
+++ b/ui/src/app/home/home.component.scss
@@ -5,27 +5,48 @@
   padding-bottom: 0%;
 }
 
-.session-input {
-  width: 100%;
-  height: 100%;
-}
-
-.go-button {
-  flex-grow: 1;
-}
-
-.load-session-row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
 .new-session-button {
   width: 100%;
 }
 
 .content-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   gap: 10px;
+  width: 100%;
+  flex-grow: 1;
+}
+
+.content-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  max-height: 100%;
+}
+
+.text-column {
+  width: 40vw;
+}
+
+.carousel-column {
+  width: 60vw;
+}
+
+.carousel-image {
+  max-height: 100%;
+  max-width: 100%;
+}
+
+.root-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.header-separator {
+  margin: 2px;
 }
