adding shadow under captions

--- a/ui/src/app/home/home.component.scss
+++ b/ui/src/app/home/home.component.scss
@@ -50,3 +50,9 @@
 .header-separator {
   margin: 2px;
 }
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 5px 10px rgba(0, 0, 0, 0.6);
+  border-radius: 40px;
+}
