--- a/ui/src/app/home/home.component.scss
+++ b/ui/src/app/home/home.component.scss
@@ -1,8 +1,42 @@
 @import "../common.scss";
 
-.textarea-container {
-  flex-grow: 5;
-  padding-bottom: 0%;
+:host-context(.bootstrap-dark) {
+  @import "~@forevolve/bootstrap-dark/scss/toggle-bootstrap-dark.scss";
+  .top-bar-container {
+    background-color: $body-bg;
+  }
+}
+
+:host-context(.bootstrap) {
+  @import "~bootstrap/scss/bootstrap";
+  .top-bar-container {
+    background-color: $body-bg;
+  }
+}
+
+.top-bar-container {
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+}
+
+.first-page {
+  gap: 50px;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column !important;
+  width: 100%;
+  flex-wrap: nowrap;
+}
+
+.content-page {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 .new-session-button {
@@ -19,40 +53,59 @@
   flex-grow: 1;
 }
 
-.content-column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  max-height: 100%;
-}
-
-.text-column {
-  width: 40vw;
-}
-
-.carousel-column {
-  width: 60vw;
-}
-
 .carousel-image {
-  max-height: 100%;
-  max-width: 100%;
-}
-
-.root-container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  height: 100vh;
+  max-width: 80vw;
+  object-fit: contain;
 }
 
 .header-separator {
-  margin: 2px;
+  margin: 0px !important;
 }
 
 .carousel-caption {
   background-color: rgba(0, 0, 0, 0.6);
   box-shadow: 0 0 5px 10px rgba(0, 0, 0, 0.6);
   border-radius: 40px;
+}
+
+.about-grid {
+  display: grid;
+  width: 80vw;
+}
+
+.about-title-layer,
+.about-carousel-layer {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.about-title-layer {
+  margin-top: 80px;
+  margin-left: 30px;
+  z-index: 1;
+}
+
+.about-title {
+  display: inline-block;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 5px 10px rgba(0, 0, 0, 0.6);
+  border-radius: 40px;
+  color: white;
+}
+
+.carousel-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+
+.about-carousel {
+  max-width: 80vw;
+  align-self: center;
 }
