added handling for font size changes

--- a/ui/src/app/session-view/session-view.component.html
+++ b/ui/src/app/session-view/session-view.component.html
@@ -3,8 +3,7 @@
     <div class="content-container">
         <app-top-bar editorMode>
         </app-top-bar>
-        <ngx-monaco-editor [options]="{theme: selectedTheme()}" (onInit)="onInit($event)"
-            class="editor-field border border-right-0 border-left-0">
+        <ngx-monaco-editor [options]="{theme: selectedTheme()}" (onInit)="onInit($event)" class="editor-field border">
         </ngx-monaco-editor>
     </div>
 </ng-template>
