--- a/ui/src/app/session-view/session-view.component.scss
+++ b/ui/src/app/session-view/session-view.component.scss
@@ -1,7 +1,9 @@
 @import "../common.scss";
 
 .editor-field {
-  width: 100%;
+  margin-top: 15px;
+  margin-left: 30px;
+  margin-right: 30px;
   position: relative;
   overflow: hidden;
   flex-grow: 1;
